--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="col-lg-4">
           <div class="rollBusiness">
             <button id="reset" type="submit" class="btn btn-secondary btn-lg">Reset!</button>
-            <button id="roll" type="submit" class="btn btn-primary btn-lg">ROLL!</button>
+            <button id="roll" type="submit" class="btn btn-dark btn-lg">ROLL!</button>
             <h3>Current Roll:</h3>
             <p><span id="currentRoll"></span></p>
             <h3>Roll Total:</h3>
